fix no modal de imagem

--- a/src/app/projeto/projeto1.component.html
+++ b/src/app/projeto/projeto1.component.html
@@ -276,7 +276,7 @@
             </div>
 
           <div class="col-md-3 offset-md-9"> 
-            <button type="submit" class="btn btn-success" id="iImg"  style="margin-top: -100%" (click)="addArquivo2('Imagem')" 
+            <button type="submit" class="btn btn-success" id="iImg"  style="margin-top: -100%" (click)="addArquivo('Imagem')" 
             (click)="limparImg()"  [disabled]="f.invalid" >Adicionar imagem.</button> 
           </div>
 
