--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -116,6 +116,7 @@
                                                   <button class="btn-desafio" data-toggle="modal" data-target="#NewModal">button</button><br/>
                                                   <button class="btn-desafio">button</button><br/>
                                                   <button class="btn-desafio">button</button><br/>
+                                                  <button class="btn-desafio">button</button><br/>
                                                   <button class="btn-desafio">button</button>
                                                 </div>
                                               </div>
