--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -113,11 +113,14 @@
                                               <div class="container-desafio">
                                                 <img [src]="imgTeste" alt="Image" class="image-desafio" style="max-width: 100%;">
                                                 <div class="middle-desafio">
-                                                  <button class="btn-desafio" data-toggle="modal" data-target="#NewModal">button</button><br/>
-                                                  <button class="btn-desafio">button</button><br/>
-                                                  <button class="btn-desafio">button</button><br/>
-                                                  <button class="btn-desafio">button</button><br/>
-                                                  <button class="btn-desafio">button</button>
+                                                  <a href="#0" data-toggle="modal" data-target="#NewModal"><img class="btn-desafio" [src]="search" alt="Image"></a><br/>
+                                                  <a href="#0" data-toggle="modal" data-target="#NewModal"><img class="btn-desafio" [src]="favorite" alt="Image"></a><br/>
+                                                  <a href="#0" data-toggle="modal" data-target="#NewModal"><img class="btn-desafio" [src]="bubble" alt="Image"></a><br/>
+                                                  <a href="#0" data-toggle="modal" data-target="#NewModal"><img class="btn-desafio" [src]="calendarToday" alt="Image"></a><br/>
+                                                  <a href="#0" data-toggle="modal" data-target="#NewModal"><img class="btn-desafio" [src]="personAdd" alt="Image"></a><br/>
+                                                  <a href="#0" data-toggle="modal" data-target="#NewModal"><img class="btn-desafio" [src]="share" alt="Image"></a><br/>
+                                                  <a href="#0" data-toggle="modal" data-target="#NewModal"><img class="btn-desafio" [src]="star" alt="Image"></a><br/>
+                                                  <a href="#0" data-toggle="modal" data-target="#NewModal"><img class="btn-desafio" style="transform: rotate(270deg);" [src]="wifi" alt="Image"></a><br/>
                                                 </div>
                                               </div>
                                               <div class="col">
