quatro cards profile

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -100,3 +100,11 @@ background: #707070;
     top: 71%;
     left: 45%;
 }
+
+.card1 {
+  margin-left: -32%;
+}
+
+.card3 {
+    margin-left: -32%;
+}
