--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -95,6 +95,50 @@
                 </div>
             </div>
         </div>
+
+        <div style="color: blue">        
+          <h5>Últimas Noticías</h5>   
+          </div> 
+          <div class="container">
+              <div class="row">
+                <div class="col-md-6">
+                  <img
+                    src="https://www.nih.no/globalassets/artikkel-toppbilde-1600x900/arbeidslivsdagen_1600.jpg"
+                    class="card1"
+                    alt="..."
+                    style="height:400px;"
+                  />
+                </div>
+                <div class="col-md-6">
+                  <img
+                    src="https://www.nih.no/globalassets/artikkel-toppbilde-1600x900/arbeidslivsdagen_1600.jpg"
+                    class="card2"
+                    alt="..."
+                    style="height:400px;"
+                  />
+                </div>
+              </div>
+            <br />
+              <div class="row">
+                <div class="col-md-6">
+                  <img
+                    src="https://www.nih.no/globalassets/artikkel-toppbilde-1600x900/arbeidslivsdagen_1600.jpg"
+                    class="card3"
+                    alt="..."
+                    style="height:400px;"
+                  />
+                </div>
+                <div class="col-md-6">
+                  <img
+                    src="https://portal6.com.br/wp-content/uploads/2017/04/robo2.jpeg"
+                    class="card4"
+                    alt="..."
+                    style="height:85%; width: 131%;"
+                  />
+                </div>
+              </div>
+            </div>
+              
         <div class="padding"></div>
         <div class="padding"></div>
         <button hidden id="openModalFirst" data-toggle="modal" data-target="#modalFirst"></button>
@@ -158,7 +202,7 @@
                 </div>
               </div>
             </div>
-          </div>          
+          </div>
 
 <app-studentforms></app-studentforms>
 <app-avatar-creation></app-avatar-creation>
@@ -219,3 +263,5 @@
         </div>
       </div>
     </div>
+
+    
