--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,4 +1,3 @@
-
 .background{
     background-image: url(../../assets/background_4K.jpg);
     height: 100%;
@@ -97,7 +96,6 @@ background: #707070;
 
 #profile-image a{
     position: absolute;
-<<<<<<< HEAD
     top: 71%;
     left: 45%;
 }
@@ -109,7 +107,8 @@ background: #707070;
 .card3 {
     margin-left: -32%;
 }
-=======
+
+#profile-image a{
     top: 73%;
     left: 43%;
     padding: 1% 1%; 
@@ -212,4 +211,9 @@ background: #707070;
     font-size: 10px;
     padding: 13%;
   }
->>>>>>> 798cb5afb6771beff2d109483cf720b71ac4003d
+.card1 {
+  margin-left: -32%;
+}
+.card3 {
+    margin-left: -32%;
+}
