Espaçamento opções desafio / Gradient button

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -76,14 +76,12 @@
                                                 <a target="_blank">
                                                     <img class="portfolio-item" [src]="imgTeste" alt="Image"
                                                         style="max-width:100%;">
-                                                        <h3 style="color: orange; margin-top: -20%">{{ projeto.titulo}}</h3>
+                                                        <h3 style="color: orange; margin-top: -20%">{{ projeto.titulo }}</h3>
                                                 </a>
                                             </div>
                                             <div class="col">
-                                                <a href="#0" data-toggle="modal" data-target="#modalProject">
-                                                    <img class="portfolio-item" [src]="addImg" alt="Image"
-                                                        style="max-width:100%;">
-                                                </a>
+                                                <button type="button" class="btn-blue" data-toggle="modal" data-target="#modalProject" 
+                                                    style="height:200px;max-width:100%;">+</button>
                                             </div>
                                         </div>
                                         <!--.row-->
@@ -124,10 +122,8 @@
                                                 </div>
                                               </div>
                                               <div class="col">
-                                                  <a href="#0" data-toggle="modal" data-target="#modalProject">
-                                                      <img class="portfolio-item" [src]="addImg" alt="Image"
-                                                          style="max-width:100%;">
-                                                  </a>
+                                                  <button type="button" class="btn-blue" data-toggle="modal" data-target="#modalProject" 
+                                                    style="height:100%!important;max-width:200px;">+</button>
                                               </div>
                                           </div>
                                           <!--.row-->
