--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -1,6 +1,7 @@
 .background{
     background-image: url(../../assets/background_4K.jpg);
-    height: 100%;
+    width: 100%;
+    height: auto;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -109,6 +110,7 @@ background: #707070;
 }
 
 #profile-image a{
+    position: absolute;
     top: 73%;
     left: 43%;
     padding: 1% 1%; 
@@ -175,6 +177,7 @@ background: #707070;
 /* carousel desafios */
 .container-desafio {
     position: relative; 
+    height: 300px;
   }
   
   .image-desafio {
@@ -187,10 +190,12 @@ background: #707070;
   }
   
   .middle-desafio {
+    height: 100%!important;
+    max-width: 50px;
     transition: .5s ease;
     opacity: 0;
     position: absolute;
-    top: 46%;
+    top: 50%;
     left: 95.5%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
@@ -209,7 +214,10 @@ background: #707070;
   
   .btn-desafio {
     font-size: 10px;
-    padding: 13%;
+    padding: 4px;
+    height: 30px;
+    width: 30px;
+    margin: 3px;
   }
 .card1 {
   margin-left: -32%;
@@ -217,3 +225,34 @@ background: #707070;
 .card3 {
     margin-left: -32%;
 }
+
+.btn-blue{
+    border:1px solid #003d66;
+    font-size:100px;
+    font-family:arial, helvetica, sans-serif; 
+    padding: 30px 50px 30px 50px;
+    display:inline-block;
+    text-shadow: 1px 1px 0 rgba(0,0,0,0.3);
+    font-weight:bold; 
+    color: #72A5FF;
+     background-color: #005E9E; 
+     background-image: -webkit-gradient(linear, left top, left bottom, from(#005E9E), to(#002138));
+     background-image: -webkit-linear-gradient(top, #005E9E, #002138);
+     background-image: -moz-linear-gradient(top, #005E9E, #002138);
+     background-image: -ms-linear-gradient(top, #005E9E, #002138);
+     background-image: -o-linear-gradient(top, #005E9E, #002138);
+     background-image: linear-gradient(to bottom, #005E9E, #002138);
+     filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#005E9E, endColorstr=#002138);
+    }
+    
+    .btn-blue:hover{
+     border:1px solid #002138;
+     background-color: #00406b; 
+     background-image: -webkit-gradient(linear, left top, left bottom, from(#00406b), to(#000305));
+     background-image: -webkit-linear-gradient(top, #00406b, #000305);
+     background-image: -moz-linear-gradient(top, #00406b, #000305);
+     background-image: -ms-linear-gradient(top, #00406b, #000305);
+     background-image: -o-linear-gradient(top, #00406b, #000305);
+     background-image: linear-gradient(to bottom, #00406b, #000305);
+     filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#00406b, endColorstr=#000305);
+    }
